[gd_scene load_steps=3 format=3 uid="uid://ck01dnrayeqyd"]

[ext_resource type="Script" uid="uid://ccmc352d6i6js" path="res://Scripts/AdManager.gd" id="1_eyngg"]
[ext_resource type="Script" uid="uid://d2ekpef26q3vr" path="res://addons/AdmobPlugin/Admob.gd" id="2_nuc1s"]

[node name="AdManager" type="Node2D"]
script = ExtResource("1_eyngg")

[node name="Admob" type="Node" parent="."]
script = ExtResource("2_nuc1s")
debug_application_id = "ca-app-pub-3940256099942544~3347511713"
debug_banner_id = "ca-app-pub-3940256099942544/9214589741"
debug_interstitial_id = "ca-app-pub-3940256099942544/1033173712"
debug_rewarded_id = "ca-app-pub-3940256099942544/5224354917"
debug_rewarded_interstitial_id = "ca-app-pub-3940256099942544/5354046379"
metadata/_custom_type_script = "uid://d2ekpef26q3vr"

[connection signal="banner_ad_failed_to_load" from="Admob" to="." method="_on_admob_banner_ad_failed_to_load"]
[connection signal="banner_ad_loaded" from="Admob" to="." method="_on_admob_banner_ad_loaded"]
[connection signal="initialization_completed" from="Admob" to="." method="_on_admob_initialization_completed"]
